--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.26.9",
     "babel-jest": "^29.7.0",
     "express": "^4.21.2",
+    "firebase-tools": "^13.35.1",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
